// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile Preview Chart should not show kendo chart when model.ChartComponentData.length = 0 1`] = `
<pf-tile-preview-chart
  chartData={[Function Array]}
  legendlabelStyle={[Function Object]}
  model={[Function Object]}
  seriesItemHighlightStyle={[Function Object]}
  showChartDetail="false"
>
  
  
  <h2
    class="pr-5 chart-label"
  >
    test chart label
  </h2>
  
</pf-tile-preview-chart>
`;

exports[`Tile Preview Chart should show chart label 1`] = `
<pf-tile-preview-chart
  chartData={[Function Array]}
  legendlabelStyle={[Function Object]}
  model={[Function Object]}
  seriesItemHighlightStyle={[Function Object]}
  showChartDetail="false"
>
  
  
  <h2
    class="pr-5 chart-label"
  >
    test chart label
  </h2>
  
</pf-tile-preview-chart>
`;

exports[`Tile Preview Chart should show kendo chart when model.ChartComponentData.length > 0 1`] = `
<pf-tile-preview-chart
  chartData={[Function Array]}
  legendlabelStyle={[Function Object]}
  model={[Function Object]}
  seriesItemHighlightStyle={[Function Object]}
  showChartDetail="false"
>
  
  <div
    class="chart-container"
  >
    
    
    <kendo-chart>
      
      
      <kendo-chart-area
        background="none"
      />
      
      
      <kendo-chart-series>
        
        
        <kendo-chart-series-item
          categoryfield="CategoryName"
          field="CategoryValue"
          style=""
        >
          
          
          <kendo-chart-series-item-tooltip>
            
            
            
            
          
          </kendo-chart-series-item-tooltip>
          
        
        </kendo-chart-series-item>
        
      
      </kendo-chart-series>
      
      
      <kendo-chart-legend
        position="left"
      >
        
      
      </kendo-chart-legend>
      
    
    </kendo-chart>
    
  
  </div>
  <h2
    class="pr-5 chart-label"
  >
    test chart label
  </h2>
  
</pf-tile-preview-chart>
`;
